# AlphaRTC

./: .artifactignore  .gclient  .gclient_previous_sync_commits  .gitattributes  .gitignore  BUILD.gn  BandwidthEstimator.py  DEPS  Makefile  README.md  README.webrtc.md  avg-sender-side-bwe.py  azure-pipelines.yml  build_calls.py  bwe.txt  call_wrapper.py  gcc-build.sh  kill.sh  mahimahi-test.py  onl-build.sh  peerconnection-tutorial.md  peerconnection_serverless.py  peerconnection_serverless_receiver.py  peerconnection_serverless_sender.py  peerconnection_serverless_wo_docker.py  plot-bwe.py  plot-recv-thp.py  receiver_360p.json  receiver_720p.json  receiver_pyinfer.json  requirements.txt  rl_agent_wrapper.py  run_receiver_wo_docker.sh  run_sender_wo_docker.sh  run_training.sh  sender_360p.json  sender_720p.json  sender_pyinfer.json  sender_wrapper.py  setup_run_wo_docker.sh  (+4 more)
api/: BUILD.gn  alphacc_config.cc  alphacc_config.h  peer_connection_interface.h
bwe-alphacc/: bwe-100kbps-30sec  bwe-100kbps-3sec  bwe-12mbps-30sec  bwe-12mbps-3sec  bwe-1mbps-30sec  bwe-1mbps-3sec
call/: BUILD.gn  bitrate_allocator.cc  call.cc  call.h  call_config.h  rtp_transport_controller_send.cc  rtp_transport_controller_send.h
call_configs/: receiver_pyinfer-30sec-480x270.json  receiver_pyinfer.json  sender_pyinfer-30sec-480x270.json  sender_pyinfer-orig.json
common_video/: video_render_frames.cc
examples/: BUILD.gn
modules/congestion_controller/alpha_cc/: BUILD.gn  alpha_cc_network_control.cc  alpha_cc_network_control.h  link_capacity_estimator.cc  link_capacity_estimator.h
(+152 files in other folders)
